# eid-pam

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
po/: Makevars  POTFILES.in  de.po  eid-add.pot
src/: Makefile.am  aa2_ws.c  aa2_ws.h  drop_privs.c  drop_privs.h  eid-add.c  eid.c  eid.h  http.c  http.h  pam.c  selbstauskunft.c  selbstauskunft.h  strnstr.h  test.c
